[create] vue lifecycle 학습

--- a/15_vue/04_inputForm/01_V-model.html
+++ b/15_vue/04_inputForm/01_V-model.html
@@ -52,6 +52,7 @@
         <textarea v-model.lazy="msg"></textarea>
     </div>
 
+    <!-- select -->
     <div id="step03">
         <p>단일 선택: {{ selected }}</p>
         <select v-model="selected">
@@ -66,6 +67,21 @@
             <option value="pineapple">pineapple</option>
             <option value="grape">grape</option>
         </select>
+    </div>
+
+    <!-- checkbox -->
+    <div id="step04">
+        <p>과일 목록: {{ fruits }}</p>
+        <input type="checkbox" id="apple" name="check" value="apple" v-model="fruits">
+        <label for="apple">apple</label>
+        <input type="checkbox" id="pineapple" name="check" value="pineapple" v-model="fruits">
+        <label for="pineapple">pineapple</label>
+        <input type="checkbox" id="grape" name="check" value="grape" v-model="fruits">
+        <label for="grape">grape</label>
+
+        <br>
+        <p>toggle: {{ toggle }}</p>
+        <input type="checkbox" v-model="toggle" :true-value="dynamicTrueValue" :false-value="dynamicFalseValue">
     </div>
     <script>
         const { createApp, ref } = Vue;
@@ -108,6 +124,22 @@
                 }
             }
         }).mount("#step03");
+
+        createApp({
+            setup() {
+                const fruits = ref([]);
+                const toggle = ref('선택한 적 없음');
+                const dynamicTrueValue = ref('선택 됨');
+                const dynamicFalseValue = ref('선택 안됨');
+
+                return {
+                    fruits,
+                    toggle,
+                    dynamicTrueValue,
+                    dynamicFalseValue
+                }
+            }
+        }).mount("#step04");
     </script>
 </body>
 
